#4322 Migrate RamDirectory to MMapDirectory which is removed in lucene9